# web-project-template

./: .flake8  .gitignore  README.md  config.py  conftest.py  index.py  pyproject.toml
src/: tasks_example.py
src/database/: base.py  core.py  models.py
src/web/: client.py
src/worker/: broker.py  dependencies.py
tests/: test_polite_client.py  test_tasks.py  utils.py
tests/client/: conftest.py  test_polite_client.py
tests/database/: conftest.py  test_database.py
tests/tasks/: conftest.py
